--- a/01.metin-on-isleme/mrbeast_yorum_onisleme.ipynb
+++ b/01.metin-on-isleme/mrbeast_yorum_onisleme.ipynb
@@ -219,7 +219,7 @@
    "id": "5d3955b6",
    "metadata": {},
    "source": [
-    "## 3. 🔍 <span style=\"color:#2ecc71\"><b>Veri Setinin İlk İncelemesi</b></span>\n",
+    "## 🔍 <span style=\"color:#2ecc71\"><b>Veri Setinin İlk İncelemesi</b></span>\n",
     "\n",
     "<span style=\"color:#e67e22\"><b>Neden?</b></span>  \n",
     "Veri setinin yapısını, sütunlarını ve temel istatistiklerini analiz etmek, sonraki temizlik ve ön işleme adımlarının doğru ve etkili şekilde planlanabilmesi için gereklidir. Veri kalitesini ve işlenebilirliğini anlamak için ilk inceleme şarttır.\n",
