--- a/01.metin-on-isleme/mrbeast_yorum_onisleme.ipynb
+++ b/01.metin-on-isleme/mrbeast_yorum_onisleme.ipynb
@@ -215,11 +215,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5cc06923",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Cemal\\.cache\\kagglehub\\datasets\\kanchana1990\\mr-beast-most-viewed-yt-video-100k-comments\\versions\\1\\mrbeast.csv dosyası mr-beast-most-viewed-yt-video-100k-comments.csv olarak çalışma klasörüne kopyalandı.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# KaggleHub ile indirilen dosyayı çalışma klasörüne kopyala (hata almamak için tam yol kullanılır)\n",
+    "import shutil\n",
+    "import os\n",
+    "\n",
+    "# KaggleHub ile indirilen klasörün yolu (örnek: path değişkeni ile alınan yol)\n",
+    "indirilen_klasor = path if 'path' in globals() else 'kagglehub/datasets/kanchana1990/mr-beast-most-viewed-yt-video-100k-comments'\n",
+    "\n",
+    "# Hedef dosya adı\n",
+    "hedef_dosya = 'mr-beast-most-viewed-yt-video-100k-comments.csv'\n",
+    "\n",
+    "# Kaynak dosya yolunu bul\n",
+    "kaynak_dosya = None\n",
+    "for f in os.listdir(indirilen_klasor):\n",
+    "    if f.endswith('.csv'):\n",
+    "        kaynak_dosya = os.path.join(indirilen_klasor, f)\n",
+    "        break\n",
+    "\n",
+    "if kaynak_dosya and os.path.exists(kaynak_dosya):\n",
+    "    shutil.copyfile(kaynak_dosya, hedef_dosya)\n",
+    "    print(f\"{kaynak_dosya} dosyası {hedef_dosya} olarak çalışma klasörüne kopyalandı.\")\n",
+    "else:\n",
+    "    print('CSV dosyası bulunamadı veya yol hatalı!')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5d3955b6",
    "metadata": {},
    "source": [
-    "## 3. 🔍 <span style=\"color:#2ecc71\"><b>Veri Setinin İlk İncelemesi</b></span>\n",
+    "## 🔍 <span style=\"color:#2ecc71\"><b>Veri Setinin İlk İncelemesi</b></span>\n",
     "\n",
     "<span style=\"color:#e67e22\"><b>Neden?</b></span>  \n",
     "Veri setinin yapısını, sütunlarını ve temel istatistiklerini analiz etmek, sonraki temizlik ve ön işleme adımlarının doğru ve etkili şekilde planlanabilmesi için gereklidir. Veri kalitesini ve işlenebilirliğini anlamak için ilk inceleme şarttır.\n",
@@ -1223,49 +1262,6 @@
     "# Orijinal ve ön işlenmiş metinlerin karşılaştırılması\n",
     "print(\"Orijinal ve işlenmiş örnekler:\")\n",
     "display(df[[text_col, text_col + '_lemma', text_col + '_stem']].sample(10, random_state=42))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1663da0d",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] Sistem belirtilen yolu bulamıyor: 'kagglehub/datasets/kanchana1990/mr-beast-most-viewed-yt-video-100k-comments'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m# Kaynak dosya yolunu bul\u001b[39;00m\n\u001b[32m     12\u001b[39m kaynak_dosya = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindirilen_klasor\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[32m     14\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m f.endswith(\u001b[33m'\u001b[39m\u001b[33m.csv\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m     15\u001b[39m         kaynak_dosya = os.path.join(indirilen_klasor, f)\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: [WinError 3] Sistem belirtilen yolu bulamıyor: 'kagglehub/datasets/kanchana1990/mr-beast-most-viewed-yt-video-100k-comments'"
-     ]
-    }
-   ],
-   "source": [
-    "# KaggleHub ile indirilen dosyayı çalışma klasörüne kopyala (hata almamak için tam yol kullanılır)\n",
-    "import shutil\n",
-    "import os\n",
-    "\n",
-    "# KaggleHub ile indirilen klasörün yolu (örnek: path değişkeni ile alınan yol)\n",
-    "indirilen_klasor = path if 'path' in globals() else 'kagglehub/datasets/kanchana1990/mr-beast-most-viewed-yt-video-100k-comments'\n",
-    "\n",
-    "# Hedef dosya adı\n",
-    "hedef_dosya = 'mr-beast-most-viewed-yt-video-100k-comments.csv'\n",
-    "\n",
-    "# Kaynak dosya yolunu bul\n",
-    "kaynak_dosya = None\n",
-    "for f in os.listdir(indirilen_klasor):\n",
-    "    if f.endswith('.csv'):\n",
-    "        kaynak_dosya = os.path.join(indirilen_klasor, f)\n",
-    "        break\n",
-    "\n",
-    "if kaynak_dosya and os.path.exists(kaynak_dosya):\n",
-    "    shutil.copyfile(kaynak_dosya, hedef_dosya)\n",
-    "    print(f\"{kaynak_dosya} dosyası {hedef_dosya} olarak çalışma klasörüne kopyalandı.\")\n",
-    "else:\n",
-    "    print('CSV dosyası bulunamadı veya yol hatalı!')"
    ]
   }
  ],
